@@ -9,18 +9,28 @@ New Features
   * When initiated, Sag checks the PHP environment for unsupported
     error_reporting values. Thanks to Simeon Willbanks. (closes #8, #9)
 
+  * setStaleDefault() was created to easily allow developers the choice of
+    making all of their GET and HEAD requests use stale=ok or not. This is
+    great for production systems that do all their querying against stale
+    views, allowing another process to trigger index updates based on the
+    _changes feed.
+
 Version 0.3
 -----------
 
 New Features
 
   * Cookie based authentication. Thanks to Benjamin Young. (closes #1)
+
   * Cache results with the SagCache interface. Currently supports caching to
     disk with SagFileCache.
+
   * Support for HEAD requests. Thanks to Doug Cone. (closes #3)
+
   * You can now POST to any URI in the database, adding a second $uri parameter
     to the post() function. Allows POST'ing to views. Thanks to Peter Kruithof.
     (closes #7)
+
   * Exposing CouchDB's runtime _stats interface with the getStats() function.
 
 Fixed Bugs
